--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="slides">
 			<section>
 				<h2>Vuejs 进阶培训</h2>
-				<h4>组件、复用与路由</h4>
+				<h4>组件、路由与vuex</h4>
 				<small>@众越科技</small>
 			</section>
 			<!-- 组件 -->
@@ -68,6 +68,10 @@ Vue.component('button-counter', {
 			<!-- 路由 -->
 			<section>
 				<h2>vue-router</h2>
+			</section>
+			<!-- vuex -->
+			<section>
+				<h2>vuex</h2>
 			</section>
 		</div>
 	</div>
